// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: ComponentPreview CodeFigure removes outer tag from markup 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      HTML
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              &lt;h1 class="h1-class"&gt;test1&lt;/h1&gt;
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;

exports[`Utilities: ComponentPreview CodeFigure removes outer tag from multiple html tags 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      HTML
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

              2
              

              3
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              &lt;h1 class="h1-class"&gt;test1&lt;/h1&gt;
              

              &lt;h1 class="h1-class"&gt;test1&lt;/h1&gt;
              

              &lt;h1 class="h1-class"&gt;test1&lt;/h1&gt;
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;

exports[`Utilities: ComponentPreview CodeFigure renders css string 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      CSS
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              color: red;
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;

exports[`Utilities: ComponentPreview CodeFigure renders multiple javascript strings 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      JAVASCRIPT
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              const a = 12;const b = 1;const c = a + b;
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;

exports[`Utilities: ComponentPreview CodeFigure returns a message if no child is passed 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      HTML
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              Check ComponentPreview _removeOuterTag!
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;

exports[`Utilities: ComponentPreview does not render showCasePanelAdvanced when showCasePanel or showCasePanelAdvanced is false/not provided 1`] = `
<figure>
  <div
    className="code-view"
  >
    <header
      className="code-view-header"
    >
      HTML
      <button
        aria-describedby="tooltipCopy"
        className="tooltip"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at-clipboard small"
        />
        <div
          id="tooltipCopy"
          role="tooltip"
        >
          Copy to clipboard
        </div>
      </button>
    </header>
    <table
      className="code-view-table"
    >
      <tbody>
        <tr>
          <td
            className="code-view-numbers"
          >
            <pre>
              1
              

            </pre>
          </td>
          <td
            className="code-view-code"
          >
            <pre>
              &lt;h1 class="h1-class"&gt;test1&lt;/h1&gt;
              

            </pre>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</figure>
`;
